Добавляет надписи на фото занятий

--- a/index.html
+++ b/index.html
@@ -100,9 +100,21 @@
             <div class="container">
                 <h2 class="title">Чем мы занимаемся</h2>
                 <ul class="list">
-                    <li class="item"><img class="picture" src="./images/jobs/img1.jpg" alt="Разработка сайтов" width="370" height="294"> </li>
-                    <li class="item"><img class="picture" src="./images/jobs/img2.jpg" alt="Разработка мобильных приложений" width="370" height="294"></li>
-                    <li class="item"><img class="picture" src="./images/jobs/img3.jpg" alt="Разработка приложений для планшетов" width="370" height="294"></li>
+                    <li class="item"><img class="picture" src="./images/jobs/img1.jpg" alt="Разработка сайтов" width="370" height="294">
+                        <div class="description-job">
+                            <p class="title">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
+                        </div> 
+                    </li>
+                    <li class="item"><img class="picture" src="./images/jobs/img2.jpg" alt="Разработка мобильных приложений" width="370" height="294">
+                        <div class="description-job">
+                            <p class="title">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
+                        </div> 
+                    </li>
+                    <li class="item"><img class="picture" src="./images/jobs/img3.jpg" alt="Разработка приложений для планшетов" width="370" height="294">
+                        <div class="description-job">
+                            <p class="title">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
+                        </div> 
+                    </li>
                 </ul>
             </div>
         </section>
