--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
++9 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -102,17 +102,17 @@
                 <ul class="list">
                     <li class="item"><img class="picture" src="./images/jobs/img1.jpg" alt="Разработка сайтов" width="370" height="294">
                         <div class="description-job">
-                            <p class="title">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
+                            <p class="title">Десктопные приложения</p>
                         </div> 
                     </li>
                     <li class="item"><img class="picture" src="./images/jobs/img2.jpg" alt="Разработка мобильных приложений" width="370" height="294">
                         <div class="description-job">
-                            <p class="title">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
+                            <p class="title">Мобильные приложения</p>
                         </div> 
                     </li>
                     <li class="item"><img class="picture" src="./images/jobs/img3.jpg" alt="Разработка приложений для планшетов" width="370" height="294">
                         <div class="description-job">
-                            <p class="title">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
+                            <p class="title">Дизайнерские решения</p>
                         </div> 
                     </li>
                 </ul>
