--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     Web<span class="accent">Studio</span>
                 </a>
                 <ul class="site-nav list">
-                    <li class="item"><a class="link current" href="./index.html">Студия</a></li>
+                    <li class="item current"><a class="link current" href="./index.html">Студия</a></li>
                     <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
                     <li class="item"><a class="link" href="">Контакты</a></li>
                 </ul>
