--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                 </a>
                 <ul class="site-nav list">
                     <li class="item"><a class="link" href="./index.html">Студия</a></li>
-                    <li class="item"><a class="link current" href="./portfolio.html">Портфолио</a></li>
+                    <li class="item current"><a class="link current" href="./portfolio.html">Портфолио</a></li>
                     <li class="item"><a class="link" href="">Контакты</a></li>
                 </ul>
             </nav>
