--- a/portfolio.html
+++ b/portfolio.html
@@ -57,63 +57,90 @@
                     <!--Портфолио-->
                     <ul class="list-img">
                         <li class="item">
-                            <img class="picture" src="./images/portfolio/img7.jpg" alt="Экран ноутбука с сайтом" width="370" height="294">
+                            <div class="picture-and-overlay">
+                                <img class="picture" src="./images/portfolio/img7.jpg" alt="Экран ноутбука с сайтом" width="370" height="294">
+                                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="title-text">
                                 <h3 class="title">Технокряк</h3>
                                 <p class="text">Веб-сайт</p>
                             </div>  
                         </li>
                         <li class="item">
-                            <img class="picture" src="./images/portfolio/img8.jpg" alt="Постер" width="370" height="294"> 
+                            <div class="picture-and-overlay">
+                                <img class="picture" src="./images/portfolio/img8.jpg" alt="Постер" width="370" height="294"> 
+                                <p class="overlay">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus distinctio eaque cumque, eum necessitatibus architecto libero cupiditate, esse itaque optio, maxime fugit quaerat sint non dolore tenetur. Ipsum, mollitia magni?</p>
+                            </div>
                             <div class="title-text">
                                 <h3 class="title">Постер New Orlean vs Golden Star</h3>
                                 <p class="text">Дизайн</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img class="picture" src="./images/portfolio/img9.jpg" alt="Логотип ресторана Seefood" width="370" height="294">
+                            <div class="picture-and-overlay">
+                                <img class="picture" src="./images/portfolio/img9.jpg" alt="Логотип ресторана Seefood" width="370" height="294">
+                                <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum nisi eaque delectus consequuntur aliquam quam totam numquam mollitia? Eligendi eum consequatur ratione soluta deserunt commodi dolor sapiente tenetur. Aut, vitae!</p>
+                            </div>
                             <div class="title-text">
                                 <h3 class="title">Ресторан Seafood</h3>
                                 <p class="text">Приложение</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img class="picture" src="./images/portfolio/img10.jpg" alt="Наушники" width="370" height="294">
+                            <div class="picture-and-overlay">
+                                <img class="picture" src="./images/portfolio/img10.jpg" alt="Наушники" width="370" height="294">
+                                <p class="overlay">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi corporis sint quibusdam aut alias quidem, neque, obcaecati dolorem possimus vitae consequatur dolore mollitia porro reprehenderit inventore! Quam maxime consequatur et!</p>
+                            </div>
                             <div class="title-text">
                                 <h3 class="title">Проект Prime</h3>
                                 <p class="text">Маркетинг</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img class="picture" src="./images/portfolio/img11.jpg" alt="Две коробки" width="370" height="294">
+                            <div class="picture-and-overlay">
+                                <img class="picture" src="./images/portfolio/img11.jpg" alt="Две коробки" width="370" height="294">
+                                <p class="overlay">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia animi quibusdam voluptatibus hic suscipit reiciendis consequatur. Facere, dolore. Assumenda, facere! Laborum molestias deserunt ea consequuntur, error nobis quo explicabo laboriosam!</p>
+                            </div>
                             <div class="title-text">
                                 <h3 class="title">Проект Boxes</h3>
                                 <p class="text">Приложение</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img class="picture" src="./images/portfolio/img12.jpg" alt="Экран монитора с сайтом" width="370" height="294">
+                            <div class="picture-and-overlay">
+                                <img class="picture" src="./images/portfolio/img12.jpg" alt="Экран монитора с сайтом" width="370" height="294">
+                                <p class="overlay">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ipsa maiores deserunt nostrum nihil aperiam iste earum, quisquam corrupti exercitationem esse laudantium ratione adipisci officia assumenda quasi eum, nesciunt explicabo.</p>
+                            </div>
                             <div class="title-text">
                                 <h3 class="title" lang="en">Inspiration has no Borders</h3>
                                 <p class="text">Веб-сайт</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img  class="picture" src="./images/portfolio/img13.jpg" alt="Открытый журнал" width="370" height="294">
+                            <div class="picture-and-overlay">
+                                <img  class="picture" src="./images/portfolio/img13.jpg" alt="Открытый журнал" width="370" height="294">
+                                <p class="overlay">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit sit perspiciatis aliquid a consectetur molestiae saepe eos, quis velit nostrum minima voluptas dignissimos obcaecati ipsum autem reiciendis recusandae possimus dolorem.</p>
+                            </div>
                             <div class="title-text">
                                 <h3 class="title">Издание Limited Edition</h3>
                                 <p class="text">Дизайн</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img class="picture" src="./images/portfolio/img14.jpg" alt="Бирка с логотипом проекта LAB" width="370" height="294">
+                            <div class="picture-and-overlay">
+                                <img class="picture" src="./images/portfolio/img14.jpg" alt="Бирка с логотипом проекта LAB" width="370" height="294">
+                                <p class="overlay">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error qui velit consequuntur cum quaerat blanditiis odio nam assumenda est vitae! Quasi, blanditiis totam laborum ea nobis libero alias. Veritatis, repellendus.</p>
+                            </div>
                             <div class="title-text">
                                 <h3 class="title">Проект LAB</h3>
                                 <p class="text">Маркетинг</p>
                             </div>
                         </li>
                         <li class="item">
-                            <img class="picture" src="./images/portfolio/img15.jpg" alt="Ноутбук с открытым приложением" width="370" height="294">
+                            <div class="picture-and-overlay">
+                                <img class="picture" src="./images/portfolio/img15.jpg" alt="Ноутбук с открытым приложением" width="370" height="294">
+                                <p class="overlay">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, repellat, similique eius eaque quisquam fugit unde quod ab nobis vitae eligendi minima quae excepturi ullam nulla! Earum dignissimos aut ad.</p>
+                            </div>
                             <div class="title-text">
                                 <h3 class="title">Growing Business</h3>
                                 <p class="text">Приложение</p>
